css/todo.css
body {
	font-family:Arial, Helvetica, sans-serif;
	padding-left: 10px;
	padding-top: 15px;
	background-color:white;
	min-width:830px;
	min-height: 1500px;
	background: linear-gradient(to right, rgba(255,255,255,1), rgba(198,198,198,1) 1500px);
}

#div_search_bar {
	margin:3px;
	position: fixed;
	padding:4px;
	padding-top:8px;
	padding-bottom:8px;
	background-color: #222222;
	width: 840px;
	z-index: 1000;
	/* border-radius: 6px 6px 6px 6px; */
}

#div_side_panel {
	margin:0px;
	left:882px; /* 872px */
	top:-7px;
	position: fixed;
	padding-top:27px;
	padding-left:27px;
	padding-right:14px;
	padding-bottom:0px;
	background-color: #cccccc;
	width: 100%;
	height: 110%;
	z-index: 1000;
	/* border-radius: 0px 0px 0px 0px; */
	box-shadow: 5px 5px 5px 5px #555555;
	color: #666666;
}

#div_auto {
	position: fixed;
	left: 70px;
	width:398px;
	background-color:#FFFFFF;
	border:1px solid #CCCCCC;
	padding-left:4px;
	margin-top:1px;
	z-index: 1000;
	box-shadow: 3px 3px 3px #888888;
}

div.tag-suggestions {
	position: absolute;
	left: 207px;
	width:355px;
	background-color:#FFFFFF;
	border:1px solid #CCCCCC;
	padding-left:4px;
	box-shadow: 3px 3px 3px #888888;
}

#div_items {
	margin-top:54px;
	margin-bottom:250px;
}

#div_index {
	background-color: #dddddd;
}

.item {
	width: 840px;
	margin: 0px;
	padding-left: 0px;
	padding-top: 4px;
	padding-bottom: 4px;
	margin-left: 3px;
}

/* ensure that an item cannot be too much larger than screen */
/*
.item-content-container {
	overflow-x:hidden;
	overflow-y:auto;
	max-height: 500px;
}
*/

.subitemdata {
	margin: 0px;
	border: 0px;
	border-style: solid;
	min-height: 28px; /* 20px */
	
}

.even-item .subitemdata {
	border-style: solid;
	border-top: solid 1px #CCCCCC;
}

.odd-item .subitemdata {
	border-style: solid;
	border-top: solid 1px #AAAAAA;
}

.no-highlight {
	display:none;
}

.selected-item {
	background-color:#eeffee;
	box-shadow: 5px 5px 5px #888888;
}

.moused-tag {
	color: blue;
	font-weight: bold;
}

.data {
	padding:2px;
}

.even-item {
	background-color:#ffffff;
	border: 1px solid #ffffff;
	/* border-radius: 6px 6px 6px 6px; */
}

.odd-item {
	background-color:#dedede;
	border: 1px solid #dedede;
	/* border-radius: 6px 6px 6px 6px; */
}

.subitem {
	padding-top:5px;
	padding-bottom:5px;
}

/*
.even-item .odd-subitem {
	background-color:#efefef;
}

.odd-item .odd-subitem {
	background-color:#eeeeee;
}
*/

.moused {
	border: 1px solid black;
	/* box-shadow: 3px 3px 3px #888888; */
}

.moused-selected {
	border: 1px solid green;
}

.tags {
	width: 100%;
	padding: 3px;
	background-color: #bbeebb;
}

#search_input {
	position: relative;
}

.selected-suggestion {
	background-color:#AAAAAA;
}

.selected-tag-suggestion {
	background-color:#AAAAAA;
}

.copyable {
	display:inline-block;
}

code {
	display:block;
	background:#555555;
	color:white;
	border:black dashed 1px; 
	padding:6px;
}

#total_results {
	display:inline-block;
	font-family:Courier New;
	width:120px;
	padding-right:7px;
	padding-top:12px;
	color:white;
	float:right;
}

.my-dropdown {
	display: inline !important;
}

.hide-me:not(:hover){
  filter: blur(5px);
}

.tooltip {
    
    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
    opacity: 0;
    transition: opacity 1s;
}

table, td, th {    
    border: 1px solid #ddd;
    text-align: left;
}

table {
    border-collapse: collapse;
    border-color: #333333;
    min-width: 25%;
}

th, td {
    padding: 5px;
    border-color: #333333;
}

th {
	background-color: #bbbbbb;
	border-color: #333333;
}

.action-goto-search {
	text-decoration: underline;
	cursor: pointer;
}

.macro-var {
	font-weight: bold;
	color: green;
	background: #ffd9b3;
}

.box{
    display: block;
    position: relative;
    z-index: 100;
    width: 100%;
}

img {
	max-width: 100%;
	max-height: 100%;
}

